# jones_polynomial

./: .gitignore  Jones Polynomial Via Skein Template Algorithm (some problems with recursion)  README.md  jones  jones_polynomial_via_skein_template_algorithm.c
src/: circle_count.c  circle_count_backup.txt  create_kauffman_bracket_from_data.c  get_indices.c  jones_polynomial_proof_of_concept.c  knot_data.h  normalized_jones.c  print_poly.c  q_plus_q_inverse_powers.h
src/circle_counting/: add_kauffman_summand.c  add_normalized_kauffman_summand.c  build_primes.bat  circle_count.c  get_indices.c  get_road_number.c  jones.c  jones_normalization.c  kauffman.h  kauffman_bracket.c  main.c  normalized_kauffman_bracket.c  q_plus_q_inverse_powers.h  tmpl_string.h
src/eashoori/: CMakeLists.txt  JONES.c  Jones_Partial.c  README.md  add_polynomials.c  adjust_polynomial_degree.c  free_gauss.c  initialize_polynomial.c  isitsmaller.c  main.c  make_polynomial.c  multiply_polynomials.c  polynomial_power.c  print_polynomial.c  scale_polynomial.c  skein_template.h  splice.c  subtract_polynomials.c  virtue.c  writhe.c
src/hshieh/: CMakeLists.txt  DT_letter_to_number.c  DT_to_PD.c  README.md  add_crossing.c  add_to_kauffman_summand.c  add_to_kauffman_summand_collection.c  adjust_polynomial_degree.c  array_position.c  build_primes.bat  catalan.c  catalan_definitions.c  catalan_info.h  copy_array.c  copy_kauffman_summand.c  copy_tangle.c  crossing_position.c  delete_boundary_point.c  free_kauffman_summand.c  free_polynomial.c  free_tangle.c  initialize_polynomial.c  insert_boundary_point.c  is_crossing_consecutive.c  jones_polynomial.c  kauffman_implementation.h  kauffman_polynomial.c  main.c  make_DT_knot.c  make_crossing.c  make_kauffman_summand.c  make_knot.c  make_stack.c  make_tangle.c  pair_strands.c  peek_stack.c  pop_stack.c  print_polynomial.c  push_stack.c  remove_circle.c  (+8 more)
src/load_balanced/: CMakeLists.txt  DT_letter_to_number.c  DT_to_PD.c  PD_to_algorithm_knot.c  README.md  a_and_a_inverse.h  a_and_a_inverse_definitions.c  a_squared_plus_a_inverse_definitions.c  a_squared_plus_a_inverse_squared.h  add_polynomials.c  adjust_polynomial_degree.c  bigon_finder.c  bigon_search.c  copy_link.c  delete_crossing.c  delete_polynomial.c  gamma_finder  gamma_search.c  initialize_polynomial.c  jones_polynomial.c  kauffman_bracket_polynomial.c  load_balanced.h  main.c  make_DT_knot.c  make_PD_knot.c  make_crossing.c  make_knot.c  make_link.c  make_polynomial.c  multiply_polynomials.c  next.c  next_crossing.c  null_gamma.c  null_triple.c  pair_crossings.c  print_link.c  print_polynomial.c  reidemeister_move_i.c  reidemeister_move_ii.c  reidemeister_move_iii_search.c  (+8 more)
src/old/: circle_count_2.txt  circle_count_3.txt  knot_from_gauss_string_2.txt
src/old_code/: delete_crossing.c  gamma_finder.c  make_crossing.c  make_knot.c  next_crossing.c  reidemeister_move_ii.c
src/pbai/Alexander Polynomial/: CMakeLists.txt  main.c
src/pbai/Alexander Polynomial/braid/: CMakeLists.txt  braid_knot.h  compress_braid_word.c  destruct_braid_word.c  new_braid_word.c
src/pbai/Alexander Polynomial/double_matrix/: CMakeLists.txt  destruct_double_matrix.c  determinant_double_matrix.c  double_matrix.h  new_double_matrix.c  print_double_matrix.c
src/pbai/Alexander Polynomial/double_polynomial/: CMakeLists.txt  add_double_polynomial.c  double_polynomial.h  evaluate_double_polynomial_double.c  multiply_double_polynomial.c  new_double_polynomial.c  print_double_polynomial.c  scale_double_polynomial.c
src/pbai/Alexander Polynomial/int_polynomial/: CMakeLists.txt  add_int_polynomial.c  evaluate_int_polynomial_int.c  int_polynomial.h  multiply_int_polynomial.c  new_int_polynomial.c  print_int_polynomial.c
src/pbai/Alexander Polynomial/int_polynomial_matrix/: CMakeLists.txt  destruct_int_polynomial_matrix.c  determinant_int_polynomial_matrix.c  int_polynomial_matrix.h  new_int_polynomial_matrix.c  print_int_polynomial_matrix.c
src/pbai/Alexander Polynomial/misc/: CMakeLists.txt  misc.h  swap_int.c
src/pbai/Alexander Polynomial/pd_code/: CMakeLists.txt  new_pd_code_node.c  pd_code_alexander_polynomial.c  pd_code_knot.h
src/pbai/Alexander Polynomial/trace_jones_polynomial/: CMakeLists.txt  big_omega.c  destruct_trace_queue_node.c  invert.c  lflush.c  new_trace_queue_node.c  squeeze.c  trace.c  trace_jones_polynomial.h
src/symbolic_pd_replacement/: add_kauffman_summand.c  build_primes.bat  chain_length.c  circle_count.c  get_affine_terms.c  hamming_weight.c  jones.c  jones_normalization.c  kauffman.h  kauffman_bracket.c  kauffman_bracket_from_data.c  knot_data.h  main.c  normalized_jones.c  normalized_kauffman_bracket.c  pop_chain.c  print_chain.c  print_knot.c  set_affine_term_from_crossing.c  simplify_chain.c
